fix: table wraper size

--- a/admin/src/assets/styles/components/_TableComponent.scss
+++ b/admin/src/assets/styles/components/_TableComponent.scss
@@ -8,12 +8,15 @@ $cellHeight: 3.5em;
 
 	border-collapse: collapse;
 	border-spacing: 0;
-	width: 100%;
 	background-color: $white;
 	font-family: Poppins, sans-serif;
 	font-size: 0.75rem;
 	line-height: 1.3;
 	transform: translateZ(1px);
+
+	&:not(.resizable) {
+		width: 100% !important;
+	}
 
 	&-container {
 
